--- a/it/informationsmanagement/publikation.html
+++ b/it/informationsmanagement/publikation.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Belegeingang</title>
+        <title>Publikation</title>
 
 
         <!-- Custom HTML head -->
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../einleitung.html">Einleitung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung.html"><strong aria-hidden="true">1.</strong> Finanzverwaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung.html"><strong aria-hidden="true">1.1.</strong> Debitorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung.html"><strong aria-hidden="true">1.1.1.</strong> Elternbeitragsverarbeitung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html"><strong aria-hidden="true">1.1.1.1.</strong> Stammdaten-Abrechnungs-Management</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html"><strong aria-hidden="true">1.1.1.2.</strong> Lastschriftenauslösung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftverbuchung.html"><strong aria-hidden="true">1.1.1.3.</strong> Lastschriftverbuchung</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html"><strong aria-hidden="true">1.1.2.</strong> Eingliederungshilfe</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/mahnwesen.html"><strong aria-hidden="true">1.1.3.</strong> Mahnwesen</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung.html"><strong aria-hidden="true">1.2.</strong> Kreditorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/belegeingang.html" class="active"><strong aria-hidden="true">1.2.1.</strong> Belegeingang</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html"><strong aria-hidden="true">1.2.2.</strong> Belegverbuchung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/zahlungsverkehr.html"><strong aria-hidden="true">1.2.3.</strong> Zahlungsverkehr</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung.html"><strong aria-hidden="true">1.3.</strong> Lohnbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnzahlung.html"><strong aria-hidden="true">1.3.1.</strong> Lohnzahlung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnverbuchung.html"><strong aria-hidden="true">1.3.2.</strong> Lohnverbuchung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnauswertung.html"><strong aria-hidden="true">1.3.3.</strong> Lohnauswertung</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../it.html"><strong aria-hidden="true">2.</strong> Information und Kommunukation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung.html"><strong aria-hidden="true">2.1.</strong> Prozessunterstützung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung/prozessbilder.html"><strong aria-hidden="true">2.1.1.</strong> Darstellung der Prozessdiagramme</a></li></ol></li><li class="chapter-item expanded "><a href="../../it/informationsmanagement.html"><strong aria-hidden="true">2.2.</strong> Informationsmanagement</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/informationsmanagement/publikation.html"><strong aria-hidden="true">2.2.1.</strong> Publikation</a></li></ol></li></ol></li><li class="chapter-item expanded "><div>Beitragende</div></li><li class="chapter-item expanded affix "><a href="../../lizenz.html">Lizenz</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../einleitung.html">Einleitung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung.html"><strong aria-hidden="true">1.</strong> Finanzverwaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung.html"><strong aria-hidden="true">1.1.</strong> Debitorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung.html"><strong aria-hidden="true">1.1.1.</strong> Elternbeitragsverarbeitung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html"><strong aria-hidden="true">1.1.1.1.</strong> Stammdaten-Abrechnungs-Management</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html"><strong aria-hidden="true">1.1.1.2.</strong> Lastschriftenauslösung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftverbuchung.html"><strong aria-hidden="true">1.1.1.3.</strong> Lastschriftverbuchung</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html"><strong aria-hidden="true">1.1.2.</strong> Eingliederungshilfe</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/mahnwesen.html"><strong aria-hidden="true">1.1.3.</strong> Mahnwesen</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung.html"><strong aria-hidden="true">1.2.</strong> Kreditorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/belegeingang.html"><strong aria-hidden="true">1.2.1.</strong> Belegeingang</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html"><strong aria-hidden="true">1.2.2.</strong> Belegverbuchung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/zahlungsverkehr.html"><strong aria-hidden="true">1.2.3.</strong> Zahlungsverkehr</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung.html"><strong aria-hidden="true">1.3.</strong> Lohnbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnzahlung.html"><strong aria-hidden="true">1.3.1.</strong> Lohnzahlung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnverbuchung.html"><strong aria-hidden="true">1.3.2.</strong> Lohnverbuchung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnauswertung.html"><strong aria-hidden="true">1.3.3.</strong> Lohnauswertung</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../it.html"><strong aria-hidden="true">2.</strong> Information und Kommunukation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung.html"><strong aria-hidden="true">2.1.</strong> Prozessunterstützung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung/prozessbilder.html"><strong aria-hidden="true">2.1.1.</strong> Darstellung der Prozessdiagramme</a></li></ol></li><li class="chapter-item expanded "><a href="../../it/informationsmanagement.html"><strong aria-hidden="true">2.2.</strong> Informationsmanagement</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/informationsmanagement/publikation.html" class="active"><strong aria-hidden="true">2.2.1.</strong> Publikation</a></li></ol></li></ol></li><li class="chapter-item expanded "><div>Beitragende</div></li><li class="chapter-item expanded affix "><a href="../../lizenz.html">Lizenz</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -176,26 +176,29 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="belegeingang"><a class="header" href="#belegeingang">Belegeingang</a></h1>
-<h3 id="prozessablauf"><a class="header" href="#prozessablauf">Prozessablauf</a></h3>
-<style>#js-canvas { background-color: #eeeeee; } </style>
-<div class="canvas"><div id="js-canvas"></div></div>
-<script>
-    var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:500 });
-    function openFromUrl(url) { $.ajax(url, { dataType : 'text' }).done(async function(xml) {
-        try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
-openFromUrl('./belegeingang.bpmn');
-</script>
+                        <h1 id="publikation"><a class="header" href="#publikation">Publikation</a></h1>
+<h2 id="website"><a class="header" href="#website">Website</a></h2>
+<p>Das Handbuch zur Organisationsentwicklung wird weitgehend automatisch publiziert. Dazu dient die versionierte Ablage aller Inhalte im github Projekt-Repository. Sobald eine neue Version hinzugefügt wird, startet automatisch der Publikationsprozess und nach wenigen Minuten ist die neue Seite im Web unter <a href="https://freiebildung.github.io/Organisationsentwicklung">https://freiebildung.github.io/Organisationsentwicklung</a> verfügbar. </p>
+<p>Zum Schreiben und schnellen Testen kann die Erzeugung auch lokal auf dem PC durchgeführt werden.</p>
+<p><img src="publizieren.png" alt="wie das Buch entsteht" /></p>
+<h2 id="lebenszyklus-prozess-der-dokumentation"><a class="header" href="#lebenszyklus-prozess-der-dokumentation">Lebenszyklus-Prozess der Dokumentation</a></h2>
+<h3 id="schreiben"><a class="header" href="#schreiben">Schreiben</a></h3>
+<p>Autoren schreiben im github-Repository <strong>Organisationsentwicklung</strong> in den Branch <em>develop</em>. Sie können  lokal ihre Änderungen testen.</p>
+<h3 id="prüfen"><a class="header" href="#prüfen">Prüfen</a></h3>
+<p>Ein Redakteur kann durch einen Pull-Request die letzten Änderungen von <em>develop</em> nach <em>staging</em> übernehmen. Dieser Pull-Request löst eine Publikation auf die Pages des Repositories aus, so dass nun alle erstellten Änderungen auch auf einer Testseite im Internet zu sehen sind. Die Seite steht im Anschluss unter <a href="https://freiebildung.github.io/Organisationsentwicklung/">https://freiebildung.github.io/Organisationsentwicklung/</a> zur Verfügung.</p>
+<h3 id="freigeben"><a class="header" href="#freigeben">Freigeben</a></h3>
+<p>Wenn die Änderungen auf der Testseite zufriedenstellend sind, kann der verantwortliche Redakteur die Seite auf die offizielle Website übernehmen. Dies erfolgt mit...</p>
+<p>https://github.com/FreieBildung/Organisationsentwicklung/compare/staging...develop</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../finanzverwaltung/kreditorenbuchhaltung.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../it/informationsmanagement.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../../finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../lizenz.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -205,11 +208,11 @@ openFromUrl('./belegeingang.bpmn');
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../finanzverwaltung/kreditorenbuchhaltung.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../it/informationsmanagement.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../../finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../lizenz.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
