--- a/it/prozessunterstuetzung/prozessbilder.html
+++ b/it/prozessunterstuetzung/prozessbilder.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Belegeingang</title>
+        <title>Darstellung der Prozessdiagramme</title>
 
 
         <!-- Custom HTML head -->
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../einleitung.html">Einleitung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung.html"><strong aria-hidden="true">1.</strong> Finanzverwaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung.html"><strong aria-hidden="true">1.1.</strong> Debitorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung.html"><strong aria-hidden="true">1.1.1.</strong> Elternbeitragsverarbeitung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html"><strong aria-hidden="true">1.1.1.1.</strong> Stammdaten-Abrechnungs-Management</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html"><strong aria-hidden="true">1.1.1.2.</strong> Lastschriftenauslösung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftverbuchung.html"><strong aria-hidden="true">1.1.1.3.</strong> Lastschriftverbuchung</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html"><strong aria-hidden="true">1.1.2.</strong> Eingliederungshilfe</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/mahnwesen.html"><strong aria-hidden="true">1.1.3.</strong> Mahnwesen</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung.html"><strong aria-hidden="true">1.2.</strong> Kreditorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/belegeingang.html" class="active"><strong aria-hidden="true">1.2.1.</strong> Belegeingang</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html"><strong aria-hidden="true">1.2.2.</strong> Belegverbuchung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/zahlungsverkehr.html"><strong aria-hidden="true">1.2.3.</strong> Zahlungsverkehr</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung.html"><strong aria-hidden="true">1.3.</strong> Lohnbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnzahlung.html"><strong aria-hidden="true">1.3.1.</strong> Lohnzahlung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnverbuchung.html"><strong aria-hidden="true">1.3.2.</strong> Lohnverbuchung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnauswertung.html"><strong aria-hidden="true">1.3.3.</strong> Lohnauswertung</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../it.html"><strong aria-hidden="true">2.</strong> Information und Kommunukation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung.html"><strong aria-hidden="true">2.1.</strong> Prozessunterstützung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung/prozessbilder.html"><strong aria-hidden="true">2.1.1.</strong> Darstellung der Prozessdiagramme</a></li></ol></li><li class="chapter-item expanded "><a href="../../it/informationsmanagement.html"><strong aria-hidden="true">2.2.</strong> Informationsmanagement</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/informationsmanagement/publikation.html"><strong aria-hidden="true">2.2.1.</strong> Publikation</a></li></ol></li></ol></li><li class="chapter-item expanded "><div>Beitragende</div></li><li class="chapter-item expanded affix "><a href="../../lizenz.html">Lizenz</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../einleitung.html">Einleitung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung.html"><strong aria-hidden="true">1.</strong> Finanzverwaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung.html"><strong aria-hidden="true">1.1.</strong> Debitorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung.html"><strong aria-hidden="true">1.1.1.</strong> Elternbeitragsverarbeitung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html"><strong aria-hidden="true">1.1.1.1.</strong> Stammdaten-Abrechnungs-Management</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html"><strong aria-hidden="true">1.1.1.2.</strong> Lastschriftenauslösung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftverbuchung.html"><strong aria-hidden="true">1.1.1.3.</strong> Lastschriftverbuchung</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html"><strong aria-hidden="true">1.1.2.</strong> Eingliederungshilfe</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/mahnwesen.html"><strong aria-hidden="true">1.1.3.</strong> Mahnwesen</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung.html"><strong aria-hidden="true">1.2.</strong> Kreditorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/belegeingang.html"><strong aria-hidden="true">1.2.1.</strong> Belegeingang</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html"><strong aria-hidden="true">1.2.2.</strong> Belegverbuchung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/zahlungsverkehr.html"><strong aria-hidden="true">1.2.3.</strong> Zahlungsverkehr</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung.html"><strong aria-hidden="true">1.3.</strong> Lohnbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnzahlung.html"><strong aria-hidden="true">1.3.1.</strong> Lohnzahlung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnverbuchung.html"><strong aria-hidden="true">1.3.2.</strong> Lohnverbuchung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnauswertung.html"><strong aria-hidden="true">1.3.3.</strong> Lohnauswertung</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../it.html"><strong aria-hidden="true">2.</strong> Information und Kommunukation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung.html"><strong aria-hidden="true">2.1.</strong> Prozessunterstützung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung/prozessbilder.html" class="active"><strong aria-hidden="true">2.1.1.</strong> Darstellung der Prozessdiagramme</a></li></ol></li><li class="chapter-item expanded "><a href="../../it/informationsmanagement.html"><strong aria-hidden="true">2.2.</strong> Informationsmanagement</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/informationsmanagement/publikation.html"><strong aria-hidden="true">2.2.1.</strong> Publikation</a></li></ol></li></ol></li><li class="chapter-item expanded "><div>Beitragende</div></li><li class="chapter-item expanded affix "><a href="../../lizenz.html">Lizenz</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -176,7 +176,30 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="belegeingang"><a class="header" href="#belegeingang">Belegeingang</a></h1>
+                        <h1 id="darstellung-der-prozessdiagramme"><a class="header" href="#darstellung-der-prozessdiagramme">Darstellung der Prozessdiagramme</a></h1>
+<p>Da die eingestellten Prozessdiagramme teilweise sehr umfangreich sind, benötigen wir eine Zoom-Funktion. Die einfachste Weise ist, den Camunda Modeler in einer Read-Only-ansicht einzubinden. Im Diagramm kann man dann mit Strg + Mausrad zoomen. </p>
+<p>Leider bringt dies etwas Code-Overhead mit sich, da das Script zum Einbinden sich nicht komplett &quot;verstecken&quot; lässt.</p>
+<p>Beispiel für eine Seite mit camunda-Code:</p>
+<pre><code># Belegeingang
+
+Das ist ein Text vor dem Diagramm.
+
+### Prozessablauf
+
+&lt;style&gt;#js-canvas { background-color: #eeeeee; } &lt;/style&gt;
+&lt;div class=&quot;canvas&quot;&gt;&lt;div id=&quot;js-canvas&quot;&gt;&lt;/div&gt;&lt;/div&gt;
+&lt;script&gt;
+    var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:500 });
+    function openFromUrl(url) { $.ajax(url, { dataType : 'text' }).done(async function(xml) {
+        try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
+    openFromUrl('./belegeingang.bpmn');
+&lt;/script&gt;
+
+Das ist ein Text nach dem Diagramm.
+</code></pre>
+<p>ergibt:</p>
+<h1 id="belegeingang"><a class="header" href="#belegeingang">Belegeingang</a></h1>
+<p>Das ist ein Text vor dem Diagramm.</p>
 <h3 id="prozessablauf"><a class="header" href="#prozessablauf">Prozessablauf</a></h3>
 <style>#js-canvas { background-color: #eeeeee; } </style>
 <div class="canvas"><div id="js-canvas"></div></div>
@@ -184,18 +207,19 @@
     var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:500 });
     function openFromUrl(url) { $.ajax(url, { dataType : 'text' }).done(async function(xml) {
         try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
-openFromUrl('./belegeingang.bpmn');
+    openFromUrl('../finanzverwaltung/kreditorenbuchhaltung/belegeingang.bpmn');
 </script>
+<p>Das ist ein Text nach dem Diagramm.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../finanzverwaltung/kreditorenbuchhaltung.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../it/prozessunterstuetzung.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../../finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../it/informationsmanagement.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -205,11 +229,11 @@ openFromUrl('./belegeingang.bpmn');
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../finanzverwaltung/kreditorenbuchhaltung.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../it/prozessunterstuetzung.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../../finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../it/informationsmanagement.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
